--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             
             <div id="success" class="hidden">
                 <h2 class="celebration-text">Perfecto bebecilla! 💖</h2>
-                <p>¡Almorzaremos un pique deli en el nuevo Paquis a las 12:00 AM!</p>
+                <p>¡Mañana jueves almorzaremos un pique deli en el nuevo Paquis a las 12:00 AM!</p>
                 <button id="whatsappBtn" class="btn whatsapp">
                     ¡Avisarle ahora! 📱
                 </button>
